<resources>
    <string name="app_name">GreenGuard</string>
    <string name="guardians">Guardians</string>
    <string name="welcome">Welcome!</string>
    <string name="location">Surabaya, East Java</string>
    <string name="explore">Explore</string>

    <string name="profile">Profile</string>
    <string name="Home">Home</string>
    <string name="news">News</string>
    <string name="scanner">Scanner</string>
    <string name="forum">Forum</string>

    <string name="icon_news">News Icon</string>
    <string name="icon_scanner">Scanner Icon</string>
    <string name="icon_forum">Forum Icon</string>
    <string name="txt_pelajari">Yuk Pelajari Penyakit Daun!</string>

    <string name="home_news">Bercak daun menjadi lebih populer karena menggunakan pestisida yang mengandung zat CT032</string>

    <string name="leaf_image_desc">Gambar Daun</string>
    <string name="txt_profile">Please login first so you can use the forum features</string>
    <string name="txt_scanning">Choose a scanning method!</string>

    <!--    Halaman Login-->
    <string name="title_login_page">Login GreenGuard</string>
    <string name="message_login_page">Lakukan Login untuk dapat mengakses semua fitur pada GreenGuard</string>
    <string name="email_text">Email</string>
    <string name="password">Password</string>
    <string name="error_password">Minimal masukkan 8 karakter</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <!--    Halaman Register-->
    <string name="title_register_page">Daftar ke GreenGuard</string>
    <string name="name">Nama</string>
    <string name="city">Kota</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="open_camera">Open Camera</string>
    <string name="picture">Picture</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>

    <!--    Item Card-->
    <string name="title_card_item">Kenapa Penyakit Daun?</string>
    <string name="description_card_item">Jamur adalah parasit paling umum yang menyebabkan penyakit tanaman. Sebagian besar merupakan tumbuhan mikroskopis (sangat kecil dan hanya dapat dilihat dengan bantuan mikroskop) yang memakan tumbuhan hijau hidup atau bahan organik mati. Ketika mereka menyerang tanaman hidup, timbullah penyakit. Jamur biasanya menghasilkan spora yang bila dibawa ke tanaman dapat menyebabkan infeksi. Spora ini dapat dibawa dari satu tanaman ke tanaman lainnya melalui angin, air, serangga, dan peralatan. Agar spora jamur dapat menimbulkan infeksi baru, diperlukan kelembapan yang cukup dan suhu udara yang tepat. Luka tanaman terkadang juga dibutuhkan sebagai jalan masuk jamur. Penyakit jamur sering terjadi pada musim hujan dan lembab.</string>

    <string name="titleName">Ababil Sitohang</string>
    <string name="descriptionForum">Hati-hati dengan penyakit hati</string>
    <string name="hintForum">Login dahulu untuk masuk forum</string>
    <string name="result_text">Login dahulu untuk masuk forum</string>

</resources>