<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.greenguard.fragment.home.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.dicoding.greenguard.fragment.forum.ForumFragment"
        android:label="@string/forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.dicoding.greenguard.fragment.scanner.ScannerFragment"
        android:label="@string/scanner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.dicoding.greenguard.fragment.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.greenguard.fragment.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>