<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_home_wave">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="130dp"
        android:src="@drawable/bg_rounded_top" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="223dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greenguard" />

    <!-- CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- Icon -->
            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_account_circle" />

            <!-- Welcome Text -->
            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/iconImageView"
                android:fontFamily="@font/plight"
                android:text="@string/welcome"
                android:textColor="#666"
                android:textSize="14sp" />

            <!-- Guardians Text -->
            <TextView
                android:id="@+id/guardiansTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeTextView"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/iconImageView"
                android:fontFamily="@font/pmedium"
                android:text="@string/guardians"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Location Text -->
            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/guardiansTextView"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/iconImageView"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="5dp"
                android:fontFamily="@font/pmedium"
                android:text="@string/location"
                android:textColor="#666"
                android:textSize="14sp" />

            <!-- Explore Button -->
            <Button
                android:id="@+id/exploreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/plight"
                android:text="@string/explore"
                android:textColor="#007BFF" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!-- Menu Section -->

    <LinearLayout
        android:id="@+id/menuSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_pelajari">

        <!-- Title Text -->

        <!-- Icons and Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Scanner Icon -->
            <LinearLayout
                android:id="@+id/scannerSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon_scanner"
                    android:src="@drawable/baseline_image_search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/plight"
                    android:text="@string/scanner"
                    android:textColor="#666"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Forum Icon -->
            <LinearLayout
                android:id="@+id/forumSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon_forum"
                    android:src="@drawable/baseline_people" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/plight"
                    android:text="@string/forum"
                    android:textColor="#666"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- News Icon -->
            <LinearLayout
                android:id="@+id/newsSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icon_news"
                    android:src="@drawable/baseline_newspaper" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/plight"
                    android:text="@string/news"
                    android:textColor="#666"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!-- New Content Section -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuSection">

        <!-- Image Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@color/primary">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/leaf_image"
                android:contentDescription="@string/leaf_image_desc" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="16dp"
                android:fontFamily="@font/plight"
                android:text="Bercak daun menjadi populer?"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- CardView Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@color/secondary">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/leaf_image"
                android:contentDescription="@string/leaf_image_desc" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="16dp"
                android:text="Bercak daun menjadi populer?"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_pelajari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/pmedium"
        android:text="@string/txt_pelajari"
        android:textColor="#666"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>