<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.profile.ProfileFragment"
    android:background="@drawable/bg_home_wave">

    <ImageView
        android:id="@+id/img_bg_rounded_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="130dp"
        android:src="@drawable/bg_rounded_top" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="223dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greenguard" />

    <!-- CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- Icon -->
            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_account_circle" />

            <!-- Welcome Text -->
            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/iconImageView"
                android:fontFamily="@font/plight"
                android:text="@string/welcome"
                android:textColor="#666"
                android:textSize="14sp" />

            <!-- Guardians Text -->
            <TextView
                android:id="@+id/guardiansTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeTextView"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/iconImageView"
                android:fontFamily="@font/pmedium"
                android:text="@string/guardians"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Location Text -->
            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/guardiansTextView"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/iconImageView"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="5dp"
                android:fontFamily="@font/pmedium"
                android:text="@string/location"
                android:textColor="#666"
                android:textSize="14sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_pelajari"
        android:layout_width="313dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/plight"
        android:text="@string/txt_profile"
        android:textColor="#666"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add"
        android:layout_width="328dp"
        android:layout_height="49dp"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pelajari" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add2"
        android:layout_width="328dp"
        android:layout_height="49dp"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="36dp"
        android:background="@color/primary"
        android:backgroundTint="@color/white"
        android:text="@string/register"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add" />


</androidx.constraintlayout.widget.ConstraintLayout>